@@ -85,9 +85,10 @@ is supposed to pass or block the message on a match (C<true> or C<false>).
 =head1 SEE ALSO
 
 L<Log::Log4perl::Filter>,
+L<Log::Log4perl::Filter::Boolean>,
 L<Log::Log4perl::Filter::LevelMatch>,
 L<Log::Log4perl::Filter::LevelRange>,
-L<Log::Log4perl::Filter::Boolean>
+L<Log::Log4perl::Filter::MDC>
 
 =head1 LICENSE
 
